# meldkit

./: .dockerignore  .gitignore  CHANGELOG.md  DISCLAIMER.md  Dockerfile  Makefile  README.md  RESULTS.md  install.ps1  install.sh  pyproject.toml
bench/: __init__.py  benchmark.py  evaluate.py  fusion_evaluate.py  fusion_goldset.json  results.json  run_all.py
cognis_vanguard/: __init__.py  cli.py  smalltarget.py  vision.py
cognis_vanguard/fusion/: __init__.py  cop.py  corroborate.py  entities.py  interop.py
confluex/: __init__.py  agents.py  cli.py  llm.py  model.py  stix.py
confluex/fusion/: __init__.py  adapters_int.py  cop.py  interop.py  tracks.py
confluex/sources/: __init__.py  adapters.py  catalog.py  client.py
data/: scenario_border_awareness.json  scenario_maritime.json
docs/: ARCHITECTURE.md  FEEDS.md  FUSION.md  INTEROP.md  LIMITATIONS.md  SOLIC_CA9_MAPPING.md
examples/: change_detection_demo.py  corroboration_demo.py  dossier_demo.py  entity_resolution_demo.py  fusion_cop_demo.py  geofence_demo.py  interop_export_demo.py  run_demo.py  tracks_pattern_demo.py
obsidia/: __init__.py  cli.py  extract.py  graph.py  index.py  report.py  resolve.py  stix.py
obsidia/fusion/: __init__.py  admiralty.py  cop.py  geofence.py  interop.py  scenario.py  schema.py
obsidia/sources/: __init__.py  catalog.py  client.py  ingest.py
tests/: test_agents.py  test_extract.py  test_fusion_adapters.py  test_fusion_admiralty.py  test_fusion_bench.py  test_fusion_cli.py  test_fusion_cop.py  test_fusion_corroborate.py  test_fusion_entities.py  test_fusion_geofence.py  test_fusion_interop.py  test_fusion_schema.py  test_fusion_tracks.py  test_graph.py  test_index.py  test_llm.py  test_resolve.py  test_sources.py  test_vision.py
