[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "obsidia"
version = "0.4.0"
description = "Self-hosted, edge-capable multi-INT fusion & agent orchestration (Obsidia)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["osint", "multi-int", "fusion", "knowledge-graph", "agents",
            "stix", "self-hosted", "edge", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
obsidia = "obsidia.cli:main"

[tool.setuptools]
packages = ["obsidia", "obsidia.sources", "obsidia.fusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
