[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "confluex"
version = "0.4.0"
description = "Self-hosted, edge-capable multi-INT fusion & agent orchestration (Confluex)"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Cognis Digital LLC" }]
keywords = ["osint", "multi-int", "fusion", "knowledge-graph", "agents",
            "stix", "self-hosted", "edge", "cognis"]
license = { text = "COCL-1.0" }
dependencies = []

[project.urls]
Homepage = "https://cognis.digital"

[project.scripts]
confluex = "confluex.cli:main"

[tool.setuptools]
packages = ["confluex", "confluex.sources", "confluex.fusion"]

[tool.pytest.ini_options]
testpaths = ["tests"]
